# opengloves-lib

./: .gitignore  CMakeLists.txt  README.md  library.json
.github/scripts/: compare-benchmarks.py
.github/workflows/: benchmark.yml  ci.yml  codeql-analyze.yml  platformio-ci.yml
benchmark/: CMakeLists.txt  bench_alpha_encode.cpp
cmake/: CheckCoverage.cmake
examples/ArduinoESP32_Serial/: ArduinoESP32_Serial.ino
src/: opengloves.hpp
src/opengloves/: alpha.hpp
test/: .clang-tidy  CMakeLists.txt
test/AlphaEncoding/: CMakeLists.txt  decode_output.cpp  encode.cpp  encode_input.cpp  encode_output.cpp  split.cpp
test/catch/: CMakeLists.txt
